Fix footer padding on mobile view

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -49,6 +49,6 @@ footer {
     }
 
     footer {
-        padding: 2rem 1.5rem;
+        padding: 2rem 1rem;
     }
 }
